Add a few issues

--- a/docs/DesignMeetingMinutes/2025-06-10.md
+++ b/docs/DesignMeetingMinutes/2025-06-10.md
@@ -36,7 +36,9 @@
 ### Current Business
 * [Design Considerations Update](https://github.com/microsoft/hlsl-specs/pull/504)
   * Action Item: Needs reviewers!
-
+* [Allow pointer math operations with vk::BufferPointer](https://github.com/microsoft/hlsl-specs/issues/511)
+* [`static` `groupshared` variables](https://github.com/microsoft/hlsl-specs/issues/510)
+* [[0001] Consider targeting 202x for hlsl namespace](https://github.com/microsoft/hlsl-specs/issues/484)
 
 ### SM 6.9
 
