Adding unsized arrays issue

--- a/docs/DesignMeetingMinutes/2025-06-24.md
+++ b/docs/DesignMeetingMinutes/2025-06-24.md
@@ -36,6 +36,7 @@
 ### Current Business
 * [Design Considerations Update](https://github.com/microsoft/hlsl-specs/pull/504)
   * Action Item: Needs reviewers!
+* [Remove unsized arrays](https://github.com/microsoft/hlsl-specs/issues/141)
 * [[0001] Consider targeting 202x for hlsl namespace](https://github.com/microsoft/hlsl-specs/issues/484)
 * HLSL 202y Proposal call for acceptance in 2 weeks
   * [[0004] Union Types](https://github.com/microsoft/hlsl-specs/blob/main/proposals/0004-unions.md)
