--- a/proposals/0028-dxil18.md
+++ b/proposals/0028-dxil18.md
@@ -5,7 +5,7 @@
 * Proposal: [0028](0028-dxil18.md)
 * Author(s): [Chris Bieneman](https://github.com/llvm-beanz)
 * Sponsor: [Chris Bieneman](https://github.com/llvm-beanz)
-* Status: **Accepted**
+* Status: **Completed**
 * Planned Version: Shader Model 6.8
 
 > Note: this proposal is preserved as documentation for DXIL 1.8. It was
