Updating with notes from the meeting

--- a/docs/DesignMeetingMinutes/2025-06-24.md
+++ b/docs/DesignMeetingMinutes/2025-06-24.md
@@ -37,7 +37,9 @@
 * [Design Considerations Update](https://github.com/microsoft/hlsl-specs/pull/504)
   * Action Item: Needs reviewers!
 * [Remove unsized arrays](https://github.com/microsoft/hlsl-specs/issues/141)
+  * Action Item: @llvm-beanz follow up with @damyanp to find an owner for this.
 * [[0001] Consider targeting 202x for hlsl namespace](https://github.com/microsoft/hlsl-specs/issues/484)
+  * Action Item: @llvm-beanz follow up with @damyanp find someone to timebox an experiment
 * HLSL 202y Proposal call for acceptance in 2 weeks
   * [[0004] Union Types](https://github.com/microsoft/hlsl-specs/blob/main/proposals/0004-unions.md)
     * [[0004] Update with detailed design ](https://github.com/microsoft/hlsl-specs/pull/520)
