Updating issue titles to be more clear

--- a/docs/DesignMeetingMinutes/2025-07-08.md
+++ b/docs/DesignMeetingMinutes/2025-07-08.md
@@ -43,15 +43,15 @@
   * [Housekeeping for proposals](https://github.com/microsoft/hlsl-specs/pull/545)
   * [PRs for meeting minutes](https://github.com/microsoft/hlsl-specs/pulls?q=is%3Apr+is%3Aopen+minutes)
 * HLSL 202y Proposals
-  * [[0002] Update attributes proposal with more details](https://github.com/microsoft/hlsl-specs/pull/534)
-  * [[0004] Update with detailed design ](https://github.com/microsoft/hlsl-specs/pull/520)
-  * [[0005] Add detailed design](https://github.com/microsoft/hlsl-specs/pull/522)
+  * [[0002] Detail attributes that will replace HLSL annotations](https://github.com/microsoft/hlsl-specs/pull/534)
+  * [[0004] ADding spec language for unions](https://github.com/microsoft/hlsl-specs/pull/520)
+  * [[0005] Adding spec language for strict initializer lists](https://github.com/microsoft/hlsl-specs/pull/522)
   * [[0007] Adding spec language for const instance methods](https://github.com/microsoft/hlsl-specs/pull/536)
   * [[0008] Adding spec language for overloading operators](https://github.com/microsoft/hlsl-specs/pull/537)
   * [[0023] Adopt C++11 Base](https://github.com/microsoft/hlsl-specs/blob/main/proposals/0023-cxx11-base.md)
     * Action item: @llvm-beanz to complete design
   * [[0032] Constructors](https://github.com/microsoft/hlsl-specs/blob/main/proposals/0032-constructors.md)
-    * Action item: @llvm-beanz to complete design
+    * Action item: @llvm-beanz to complete design [#526](https://github.com/microsoft/hlsl-specs/issues/526)
 
 
 ### SM 6.9
