Add a fw more agenda items to the current business

--- a/docs/DesignMeetingMinutes/2025-07-08.md
+++ b/docs/DesignMeetingMinutes/2025-07-08.md
@@ -32,16 +32,17 @@
   * Action Item: @llvm-beanz to work with author
 * [Memory and Execuition Model](https://github.com/microsoft/hlsl-specs/pull/505)
   * Action Item: @llvm-beanz to continue iterating on the proposal.
-* [Remove unsized arrays](https://github.com/microsoft/hlsl-specs/issues/141)
-  * Action Item: @llvm-beanz follow up with @damyanp to find an owner for this.
-* [[0001] Consider targeting 202x for hlsl namespace](https://github.com/microsoft/hlsl-specs/issues/484)
-  * Action Item: @llvm-beanz follow up with @damyanp find someone to timebox an experiment
 
 ### Current Business
 
 * housekeeping
   * [Housekeeping for proposals](https://github.com/microsoft/hlsl-specs/pull/545)
   * [PRs for meeting minutes](https://github.com/microsoft/hlsl-specs/pulls?q=is%3Apr+is%3Aopen+minutes)
+* Follow-ups @llvm-beanz failed to do
+  * [Remove unsized arrays](https://github.com/microsoft/hlsl-specs/issues/141)
+    * Action Item: @llvm-beanz follow up with @damyanp to find an owner for this.
+  * [[0001] Consider targeting 202x for hlsl namespace](https://github.com/microsoft/hlsl-specs/issues/484)
+    * Action Item: @llvm-beanz follow up with @damyanp find someone to timebox an experiment
 * HLSL 202y Proposals
   * [[0002] Detail attributes that will replace HLSL annotations](https://github.com/microsoft/hlsl-specs/pull/534)
   * [[0004] ADding spec language for unions](https://github.com/microsoft/hlsl-specs/pull/520)
