--- a/docs/DesignMeetingMinutes/2025-07-08.md
+++ b/docs/DesignMeetingMinutes/2025-07-08.md
@@ -32,23 +32,36 @@
   * Action Item: @llvm-beanz to work with author
 * [Memory and Execuition Model](https://github.com/microsoft/hlsl-specs/pull/505)
   * Action Item: @llvm-beanz to continue iterating on the proposal.
+* [[0001] Consider targeting 202x for hlsl namespace](https://github.com/microsoft/hlsl-specs/issues/484)
+  * Discussion summary between @tex3d, @damyanp & @llvm-beanz:
+    * The main concern here is that some code that is valid in DXC today will be invalid in Clang due to howe we're handling namespaces in Clang (which is the behavior we want).
+    * DXC has some gnarly and buggy implementation decisions in this area, which may make it difficult to support this.
+    * Some of the DXC issues are causing bugs that we need to address for SM 6.9. Those fixes are in-flight.
+    * Chris suggests timeboxing an experiment to see how bad it is to support the namespace in DXC.
+  * Revisit after namespace fixes in DXC go in.
 
 ### Current Business
 
 * housekeeping
   * [Housekeeping for proposals](https://github.com/microsoft/hlsl-specs/pull/545)
+    * Confirmed with @danbrown-amd that vk::BufferRef implementation is complete.
+    * Action item: @llvm-beanz to find PRs for vk::BufferRef
   * [PRs for meeting minutes](https://github.com/microsoft/hlsl-specs/pulls?q=is%3Apr+is%3Aopen+minutes)
 * Follow-ups @llvm-beanz failed to do
   * [Remove unsized arrays](https://github.com/microsoft/hlsl-specs/issues/141)
     * Action Item: @llvm-beanz follow up with @damyanp to find an owner for this.
-  * [[0001] Consider targeting 202x for hlsl namespace](https://github.com/microsoft/hlsl-specs/issues/484)
-    * Action Item: @llvm-beanz follow up with @damyanp find someone to timebox an experiment
+
 * HLSL 202y Proposals
   * [[0002] Detail attributes that will replace HLSL annotations](https://github.com/microsoft/hlsl-specs/pull/534)
-  * [[0004] ADding spec language for unions](https://github.com/microsoft/hlsl-specs/pull/520)
+    * Action item: @V-FEXrt & @tex3d
+  * [[0004] Adding spec language for unions](https://github.com/microsoft/hlsl-specs/pull/520)
+    * Action item: @farzonl
   * [[0005] Adding spec language for strict initializer lists](https://github.com/microsoft/hlsl-specs/pull/522)
+    * Action item: @bogner & @tex3d
   * [[0007] Adding spec language for const instance methods](https://github.com/microsoft/hlsl-specs/pull/536)
+    * Action item: @farzonl
   * [[0008] Adding spec language for overloading operators](https://github.com/microsoft/hlsl-specs/pull/537)
+    * Action item: @farzonl
   * [[0023] Adopt C++11 Base](https://github.com/microsoft/hlsl-specs/blob/main/proposals/0023-cxx11-base.md)
     * Action item: @llvm-beanz to complete design
   * [[0032] Constructors](https://github.com/microsoft/hlsl-specs/blob/main/proposals/0032-constructors.md)
@@ -62,5 +75,7 @@
 * [[0029][0031]In linalg Mul/MulAdd functions, the memory backing the Matrix and Bias buffers must be read-only](https://github.com/microsoft/hlsl-specs/pull/507)
 * [[Shader Execution Reordering] Minor spec inconsistency: HitObject::MakeMiss missing Ray in argument listing](https://github.com/microsoft/hlsl-specs/pull/512)
 * [Proposal for 16 bit IsSpecialFloat dxil op](https://github.com/microsoft/hlsl-specs/pull/542)
+  * These operations were originally added in SM 6.2, however a bug in DXC prevented them from being emitted and tested. We've found IHV drivers in the wild that crash or generate invalid code for these operations so we've decided to retroactively remove them from SM 6.2->6.8 and add them back in 6.9.
+  * Action item: @tex3d to review
 
 ## Other Discussion
