--- a/proposals/0033-dxil19.md
+++ b/proposals/0033-dxil19.md
@@ -6,7 +6,7 @@
 * Author(s): [Damyan Pepper](https://github.com/damyanp)
 * Sponsor: [Damyan Pepper](https://github.com/damyanp)
 * Status: **Under Review**
-* Planned Version: Shader Model 6.9
+* Planned Version: SM 6.9
 
 ## Introduction
 
