--- a/proposals/0028-dxil18.md
+++ b/proposals/0028-dxil18.md
@@ -6,7 +6,7 @@
 * Author(s): [Chris Bieneman](https://github.com/llvm-beanz)
 * Sponsor: [Chris Bieneman](https://github.com/llvm-beanz)
 * Status: **Completed**
-* Planned Version: Shader Model 6.8
+* Planned Version: SM 6.8
 
 > Note: this proposal is preserved as documentation for DXIL 1.8. It was
 > implemented as a fast-track extension and shipped in DXC 1.8. This
