Cite both program and external linkage

--- a/specs/language/basic.tex
+++ b/specs/language/basic.tex
@@ -420,7 +420,8 @@ resources in cbuffer declarations, but it does so by hoisting the resource
 declaration out to the global scope.}
 
 \item An object of intangible type may not be a parameter or return type of a
-function with program linkage (\ref{Basic.Linkage.Program}).
+function with program linkage or external linkage (\ref{Basic.Linkage.Program} &
+\ref{Basic.Linkage.External}).
 \end{itemize}
 
 \Sec{Lvalues and rvalues}{Basic.lval}
