Convert doc titles to front matter

--- a/docs/DesignMeetingMinutes/2025-02-04.md
+++ b/docs/DesignMeetingMinutes/2025-02-04.md
@@ -1,4 +1,6 @@
-# Design Meeting Minutes: 2025/02/04
+---
+title: "Design Meeting Minutes: 2025/02/04"
+---
 
 > NOTE: Please read the [terms of participation](DesignMeetingTerms.txt)
 > ("Terms") prior to joining the Teams meeting.  You joining the Teams meeting
