--- a/docs/DesignMeetingMinutes/2025-07-22.md
+++ b/docs/DesignMeetingMinutes/2025-07-22.md
@@ -1,4 +1,6 @@
-# Design Meeting Minutes: 2025/07/22
+---
+title: "Design Meeting Minutes: 2025/07/22"
+---
 
 > NOTE: Please read the [terms of participation](DesignMeetingTerms.txt)
 > ("Terms") prior to joining the Teams meeting.  You joining the Teams meeting
