Update proposals to use frontmatter

--- a/proposals/0028-dxil18.md
+++ b/proposals/0028-dxil18.md
@@ -1,11 +1,16 @@
+---
+title: 0028 - DXIL 1.8
+params:
+    authors:
+    - llvm-beanz: Chris Bieneman
+    sponsors:
+    - llvm-beanz: Chris Bieneman
+    status: Completed
+---
+
 <!-- {% raw %} -->
 
-# DXIL 1.8
-
-* Proposal: [0028](0028-dxil18.md)
-* Author(s): [Chris Bieneman](https://github.com/llvm-beanz)
-* Sponsor: [Chris Bieneman](https://github.com/llvm-beanz)
-* Status: **Completed**
+ 
 * Planned Version: SM 6.8
 
 > Note: this proposal is preserved as documentation for DXIL 1.8. It was
