--- a/proposals/0033-dxil19.md
+++ b/proposals/0033-dxil19.md
@@ -1,11 +1,16 @@
+---
+title: 0033 - DXIL 1.9
+params:
+  authors:
+  - damyanp: Damyan Pepper
+  sponsors:
+  - damyanp: Damyan Pepper
+  status: Under Review
+---
+
 <!-- {% raw %} -->
 
-# DXIL 1.9
-
-* Proposal: [0033](0033-dxil19.md)
-* Author(s): [Damyan Pepper](https://github.com/damyanp)
-* Sponsor: [Damyan Pepper](https://github.com/damyanp)
-* Status: **Under Review**
+ 
 * Planned Version: SM 6.9
 
 ## Introduction
