--- a/proposals/0020-hlsl-202x-202y.md
+++ b/proposals/0020-hlsl-202x-202y.md
@@ -1,11 +1,16 @@
+---
+title: 0020 - HLSL 202x and 202y
+params:
+  authors:
+  - llvm-beanz: Chris Bieneman
+  sponsors:
+  - llvm-beanz: Chris Bieneman
+  status: Under Review
+---
+
 <!-- {% raw %} -->
 
-# HLSL 202x and 202y
-
-* Proposal: [0020](0020-hlsl-202x-202y.md)
-* Author(s): [Chris Bieneman](https://github.com/llvm-beanz)
-* Sponsor: [Chris Bieneman](https://github.com/llvm-beanz)
-* Status: **Under Review**
+ 
 * Impacted Projects: DXC & Clang
 
 ## Introduction
