Use Hugo to build the hlsl-specs website (#616)
This change updates the various markdown documents (proposals, generals
docs etc.) to use front matter for specifying metadata.

Hugo is configured it build the site, and the github workflow has been
updated.

Removed some of the supporting scripts for the old jekyl-based site.

--- a/proposals/0020-hlsl-202x-202y.md
+++ b/proposals/0020-hlsl-202x-202y.md
@@ -1,11 +1,15 @@
-<!-- {% raw %} -->
+---
+title: 0020 - HLSL 202x and 202y
+params:
+  authors:
+  - llvm-beanz: Chris Bieneman
+  sponsors:
+  - llvm-beanz: Chris Bieneman
+  status: Under Review
+---
 
-# HLSL 202x and 202y
 
-* Proposal: [0020](0020-hlsl-202x-202y.md)
-* Author(s): [Chris Bieneman](https://github.com/llvm-beanz)
-* Sponsor: [Chris Bieneman](https://github.com/llvm-beanz)
-* Status: **Under Review**
+ 
 * Impacted Projects: DXC & Clang
 
 ## Introduction
@@ -144,4 +148,4 @@ which may or not make the cut for HLSL 202y. Those include:
 * [C++ lambdas](https://github.com/microsoft/hlsl-specs/issues/21)
 * [`union` types](https://github.com/microsoft/hlsl-specs/blob/main/proposals/0004-unions.md)
 
-<!-- {% endraw %} -->
+
