--- a/proposals/0033-dxil19.md
+++ b/proposals/0033-dxil19.md
@@ -1,11 +1,15 @@
-<!-- {% raw %} -->
+---
+title: 0033 - DXIL 1.9
+params:
+  authors:
+  - damyanp: Damyan Pepper
+  sponsors:
+  - damyanp: Damyan Pepper
+  status: Under Review
+---
 
-# DXIL 1.9
 
-* Proposal: [0033](0033-dxil19.md)
-* Author(s): [Damyan Pepper](https://github.com/damyanp)
-* Sponsor: [Damyan Pepper](https://github.com/damyanp)
-* Status: **Under Review**
+ 
 * Planned Version: SM 6.9
 
 ## Introduction
@@ -59,4 +63,4 @@ Vector / Matrix Operations.
 [Proposal 0030]: 0030-dxil-vectors.md
 [Proposal 0031]: 0031-hlsl-vector-matrix-operations.md
 
-<!-- {% endraw %} -->
+
