--- a/specs/language/conversions.tex
+++ b/specs/language/conversions.tex
@@ -31,6 +31,9 @@ prvalue is of type \texttt{T}.
 \p If the glvalue refers to an array of type \texttt{T}, the prvalue will refer
 to a copy of the array, not memory referred to by the glvalue.
 
+\p If the glvalue refers to a bit-field of type \texttt{T}, the conversion
+produces an object of the underlying type of the bit-field.
+
 \Sec{Array-to-pointer conversion}{Conv.array}
 
 \p An lvalue or rvalue of type \texttt{T[]} (unsized array), can be converted to
@@ -117,6 +120,17 @@ implementation defined.
 prvalue of arithmetic or unscoped enumeration type can be converted to a prvalue
 of boolean type. A zero value is converted to \texttt{false}; all other values
 are converted to \texttt{true}.
+
+\Sec{Bit-field conversion}{Conv.bitfield}
+
+\p A glvalue of a named bit-field with underlying type \texttt{T} can be converted
+to a cxvalue of type \texttt{T$^\prime$} if there exists an implicit conversion
+from \texttt{T} to \texttt{T$^\prime$}.
+
+\p A glvalue or a prvalue of a type \texttt{T} can be converted to a glvalue
+bit-field of type \texttt{T$^\prime$} if there exists an implicit conversion from
+\texttt{T} to \texttt{T$^\prime$}.  After the conversion from \texttt{T} to
+\texttt{T$^\prime$} the value is truncated to the size of the bit-field.
 
 \Sec{Elementwise conversion}{Conv.flat}
 
