Update DXIL summary

--- a/proposals/0033-dxil19.md
+++ b/proposals/0033-dxil19.md
@@ -43,24 +43,19 @@ intrinsics are extended to accept vector arguments.
 The HLSL changes related to this feature can be found in [Proposal 0026] - HLSL
 Long Vector Type.
 
+## 16bit IsSpecialFloat
 
-## Cooperative Vectors
+[Proposal 0038] - 16bit IsSpecialFloat
 
-[Proposal 0029] - Cooperative Vector
+The IsSpecialFloat DXIL Ops are used to implement operations, 'isinf', 'isnan',
+'isfinite', and 'isnormal'. Due to a bug (#7496), the IsSpecialFloat DXIL
+operations were never generated for 16-bit types.  This bug is fixed for SM 6.9.
 
-This enables hardware-accelerated multiplation of vectors with matrices.  Four
-new opcodes are added - `matvecmul`, `matvecmuladd`, `outerproductaccumulate`,
-`vectoraccumulate`.
-
-The HLSL API related to this feature can be found in [Proposal 0031] - HLSL
-Vector / Matrix Operations.
 
 
 [Proposal 0024]: 0024-opacity-micromaps.md
 [Proposal 0026]: 0026-hlsl-long-vector-type.md
 [Proposal 0027]: 0027-shader-execution-reordering.md
-[Proposal 0029]: 0029-cooperative-vector.md
 [Proposal 0030]: 0030-dxil-vectors.md
-[Proposal 0031]: 0031-hlsl-vector-matrix-operations.md
-
+[Proposal 0038]: 0038-16bit-isspecialfloat.md
 
