Update to "one of" grammar language

--- a/specs/language/expressions.tex
+++ b/specs/language/expressions.tex
@@ -188,17 +188,11 @@ range at runtime, the behavior is undefined.
   swizzle-component-xyzw\br
   swizzle-component-sequence-xyzw swizzle-component-xyzw\br
 
-  \define{swizzle-component-rgba}\br
-  \terminal{r}\br
-  \terminal{g}\br
-  \terminal{b}\br
-  \terminal{a}\br
+  \define{swizzle-component-rgba} \textnormal{one of}\br
+  \terminal{r g b a}\br
 
-  \define{swizzle-component-xyzw}\br
-  \terminal{x}\br
-  \terminal{y}\br
-  \terminal{z}\br
-  \terminal{w}
+  \define{swizzle-component-xyzw} \textnormal{one of}\br
+  \terminal{x y z w}
 \end{grammar}
 
 \p A \textit{postfix-expression} followed by a dot (\texttt{.}) and a sequence
