--- a/specs/language/expressions.tex
+++ b/specs/language/expressions.tex
@@ -276,6 +276,33 @@ a vector of the same element type as the postfix expression before the dot,
 with a number of elements equal to the number of components in the
 \textit{matrix-swizzle-component-sequence}.
 
+\p Matrix swizzle components map to elements of the matrix in the following way:
+
+\begin{center}
+  \begin{tabular}{|| c | c | c ||}
+    \hline
+    Element Index & 0 indexed component & 1 indexed component \\
+    \hline
+    0,0 & \_m00 & \_11 \\
+    0,1 & \_m01 & \_12 \\
+    0,2 & \_m02 & \_13 \\
+    0,3 & \_m03 & \_14 \\
+    1,0 & \_m10 & \_21 \\
+    1,1 & \_m11 & \_22 \\
+    1,2 & \_m12 & \_23 \\
+    1,3 & \_m13 & \_24 \\
+    2,0 & \_m20 & \_31 \\
+    2,1 & \_m21 & \_32 \\
+    2,2 & \_m22 & \_33 \\
+    2,3 & \_m23 & \_34 \\
+    3,0 & \_m30 & \_41 \\
+    3,1 & \_m31 & \_42 \\
+    3,2 & \_m32 & \_43 \\
+    3,3 & \_m33 & \_44 \\
+    \hline
+  \end{tabular}
+\end{center}
+
 \Sec{Function Calls}{Expr.Post.Call}
 
 \p A function call may be an \textit{ordinary function}, or a \textit{member
