this shouldn't be hyphenated since it isn't a grammar construct.
Co-authored-by: Chris B <beanz@abolishcrlf.org>

--- a/specs/language/expressions.tex
+++ b/specs/language/expressions.tex
@@ -176,7 +176,7 @@ range at runtime, the behavior is undefined.
 
 \Sec{Swizzle}{Expr.Post.Swizzle}
 \p A \textit{postfix-expression} followed by a dot (\texttt{.}) and a sequence
-of one or more \textit{swizzle-components} is a postfix expression. The
+of one or more \textit{swizzle components} is a postfix expression. The
 postfix expression before the dot is evaluated and must be of vector or matrix type.
 If the postfix expression before the dot is an lvalue, the swizzle expression may
 produce either an lvalue or a prvalue; otherwise it produces a prvalue.
