Update section name
Co-authored-by: Chris B <beanz@abolishcrlf.org>

--- a/specs/language/expressions.tex
+++ b/specs/language/expressions.tex
@@ -174,7 +174,7 @@ time to be outside the range \texttt{[0, N-1]} where \texttt{N} is the number of
 elements in the vector, the program is ill-formed. If the value is outside the
 range at runtime, the behavior is undefined.
 
-\Sec{Swizzle}{Expr.Post.Swizzle}
+\Sec{Swizzle Expressions}{Expr.Post.Swizzle}
 \p A \textit{postfix-expression} followed by a dot (\texttt{.}) and a sequence
 of one or more \textit{swizzle components} is a postfix expression. The
 postfix expression before the dot is evaluated and must be of vector or matrix type.
