Update Vector Swizzle as sub section
Co-authored-by: Chris B <beanz@abolishcrlf.org>

--- a/specs/language/expressions.tex
+++ b/specs/language/expressions.tex
@@ -186,7 +186,7 @@ produce either an lvalue or a prvalue; otherwise it produces a prvalue.
 an lvalue and the \textit{swizzle-component-sequence} contains no repeated
 components, the swizzle expression is an lvalue; otherwise it is a prvalue.
 
-\Sec{Vector Swizzle}{Expr.Post.Swizzle.Vector}
+\Sub{Vector Swizzle}{Expr.Post.Swizzle.Vector}
 
 \begin{grammar}
   \define{vector-swizzle-component-sequence}\br
