Update Matrix Swizzle as sub section
Co-authored-by: Chris B <beanz@abolishcrlf.org>

--- a/specs/language/expressions.tex
+++ b/specs/language/expressions.tex
@@ -234,7 +234,7 @@ number of elements equal to the number of components in the \textit{vector-swizz
 refers to an element index that is out of range of the vector type of the
 postfix expression before the dot.
 
-\Sec{Matrix Swizzle}{Expr.Post.Swizzle.Matrix}
+\Sub{Matrix Swizzle}{Expr.Post.Swizzle.Matrix}
 \begin{grammar}
   \define{matrix-swizzle-component-sequence}\br
   matrix-zero-indexed-swizzle-sequence\br
