--- a/specs/language/declarations.tex
+++ b/specs/language/declarations.tex
@@ -118,11 +118,11 @@ global declarations of resource objects (\ref{Resources}).
   the contained type of an array be a complete type.
 \end{note}
 
-\p A declarator with an omitted array bound is valid if the when declaring an
-object of array type which is not a non-static data member and is initialized
-with an initializer that follows the declarator. In this case the array bound is
-implied by the number of elements provided by the initializer list following the
-rules described in \ref{Decl.Init}.
+\p A declarator with an omitted array bound is valid when declaring an object of
+array type which is not a non-static data member and is initialized with an
+initializer that follows the declarator. In this case the array bound is implied
+by the number of elements provided by the initializer list following the rules
+described in \ref{Decl.Init}.
 
 \Sec{Initializers}{Decl.Init}
 
