--- a/docs/DesignMeetingMinutes/2025-11-11.md
+++ b/docs/DesignMeetingMinutes/2025-11-11.md
@@ -31,24 +31,20 @@ title: "Design Meeting Minutes: 2025/11/11"
   * Action Item: @llvm-beanz to update
 * [New Proposal: Draft proposal to modify resource typing in HLSL](https://github.com/microsoft/hlsl-specs/pull/461)
   * Action Item: @llvm-beanz to work with author
-* [Memory and Execuition Model](https://github.com/microsoft/hlsl-specs/pull/505)
-  * Action Item: @llvm-beanz to continue iterating on the proposal.
 * [[0001] Consider targeting 202x for hlsl namespace](https://github.com/microsoft/hlsl-specs/issues/484)
   * Revisit after namespace fixes in DXC go in.
 * [[0023] Adopt C++11 Base](https://github.com/microsoft/hlsl-specs/blob/main/proposals/0023-cxx11-base.md)
   * Action item: @llvm-beanz to complete design
 * [[0032] Constructors](https://github.com/microsoft/hlsl-specs/blob/main/proposals/0032-constructors.md)
   * Action item: @llvm-beanz to complete design [#526](https://github.com/microsoft/hlsl-specs/issues/526)
-* [[0002] Detail attributes that will replace HLSL annotations](https://github.com/microsoft/hlsl-specs/pull/534)
-  * Action item: @llvm-beanz to update
-
-### @llvm-beanz to review before meeting:
-* [[New] Initial draft for memory and execution model](https://github.com/microsoft/hlsl-specs/pull/505)
-* [[0042] - Restricted Unbounded Arrays](https://github.com/microsoft/hlsl-specs/blob/main/proposals/0042-restricted-unbounded-arrays.md)
-  * [Language Spec](https://github.com/microsoft/hlsl-specs/pull/634)
 
 ### Current Business
 
+* Needs Review
+  * [Unsized arrays](https://github.com/microsoft/hlsl-specs/pull/634)
+  * [Matrix Accessors](https://github.com/microsoft/hlsl-specs/pull/678)
+  * [[0002] Detail attributes that will replace HLSL annotations](https://github.com/microsoft/hlsl-specs/pull/534)
+  
 #### Discussion Topics
 
 * [[0037] - Cbuffer contexts](https://github.com/microsoft/hlsl-specs/blob/main/proposals/0037-cbuffer-contexts.md)
