specify bit-field is named

--- a/specs/language/conversions.tex
+++ b/specs/language/conversions.tex
@@ -128,9 +128,9 @@ to a cxvalue of type \texttt{T$^\prime$} if there exists an implicit conversion
 from \texttt{T} to \texttt{T$^\prime$}.
 
 \p A glvalue or a prvalue of a type \texttt{T} can be converted to a glvalue
-bit-field of type \texttt{T$^\prime$} if there exists an implicit conversion from
-\texttt{T} to \texttt{T$^\prime$}.  After the conversion from \texttt{T} to
-\texttt{T$^\prime$} the value is truncated to the size of the bit-field.
+of a named bit-field of type \texttt{T$^\prime$} if there exists an implicit
+conversion from \texttt{T} to \texttt{T$^\prime$}.  After the conversion from
+\texttt{T} to \texttt{T$^\prime$} the value is truncated to the size of the bit-field.
 
 \Sec{Elementwise conversion}{Conv.flat}
 
