address pr concerns

--- a/specs/language/expressions.tex
+++ b/specs/language/expressions.tex
@@ -245,7 +245,7 @@ postfix expression before the dot.
   matrix-zero-indexed-swizzle-sequence matrix-zero-indexed-swizzle\br
 
   \define{matrix-zero-indexed-swizzle}\br
-  \terminal{\_m} zero-index-value\br
+  \terminal{\_m} zero-index-value zero-index-value\br
 
   \define{zero-index-value} \textnormal{one of}\br
   \terminal{0 1 2 3 }\br
@@ -255,7 +255,7 @@ postfix expression before the dot.
   matrix-one-indexed-swizzle-sequence matrix-one-indexed-swizzle\br
 
   \define{matrix-one-indexed-swizzle}\br
-  \terminal{\_m} one-index-value\br
+  \terminal{\_} one-index-value one-index-value\br
 
   \define{one-index-value} \textnormal{one of}\br
   \terminal{1 2 3 4 }\br
