Update SM 6.10 proposals

--- a/proposals/0046-dxil110.md
+++ b/proposals/0046-dxil110.md
@@ -51,7 +51,26 @@ a raytracing shader.
 This proposal adds new DXIL operations for querying cluster IDs for geometry in
 raytracing shaders.
 
+### Group Wave Index
+
+[Proposal 0048] - Group Wave Index
+
+This proposal adds two new shader intrinsics two return the index of the wave, and the number of waves executing, in the thread group.
+
+### Variable Group Shared Memory
+
+[Proposal 0049] - Variable Group Shared Memory
+
+This proposal introduces a device-dependent maximum group shared memory limit,
+together with a way for shader authors to declare the maximum amount of group
+shared memory their shader will ever use so that they can guarantee portability
+across a target device set.
+
+
+
 [Proposal 0035]: 0035-linalg-matrix.md
 [Proposal 0039]: 0039-debugbreak.md
 [Proposal 0041]: 0041-triangle-object-positions.md
 [Proposal 0045]: 0045-clustered-geometry.md
+[Proposal 0048]: 0048-group-wave-index.md
+[Proposal 0049]: 0049-variable-groupshared-memory.md
